# neutral-sParrow

./: kw_mini_sdk_setup.sh
C/: CMakeLists.txt  example.cpp  open_cam3d_sdk.h
CPP/: 3.json  CMakeLists.txt  cpp_example.cpp  xcamera.h
Python/: config.json  example_mini.py
